This is my second commit

--- a/causes.html
+++ b/causes.html
@@ -286,11 +286,11 @@
         </div>
         <div class="row">
           <div class="col-md-12 text-center">
+            Copyright &copy;<script>document.write(new Date().getFullmonth());</script> All rights reserved.<i class="icon-heart" aria-hidden="true">by</i> education and care for the needy project<a href="https://colorlib.com" target="_blank">2024</a>
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  <i class="icon-heart" aria-hidden="true"></i>2024 <a href="https://colorlib.com" target="_blank"></a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-          </div>
+      </div>
         </div>
       </div>
     </footer>
