--- a/gallery.html
+++ b/gallery.html
@@ -141,7 +141,7 @@
     	<div class="container">
     		<div class="row d-md-flex">
     		<div class="col-md-6 d-flex ftco-animate">
-    			<div class="img img-2 align-self-stretch" style="background-image: url(images/b1.jpeg);"></div>
+    			<div class="img img-2 align-self-stretch" style="background-image: url(images/b1.jpeg);" data-stellar-background-ratio="0.5" ></div>
     		</div>
     		<div class="col-md-6 volunteer pl-md-5 ftco-animate">
     			<h3 class="mb-3">Be a volunteer</h3>
@@ -234,11 +234,11 @@
         </div>
         <div class="row">
           <div class="col-md-12 text-center">
+            Copyright &copy;<script>document.write(new Date().getFullmonth());</script> All rights reserved.<i class="icon-heart" aria-hidden="true">by</i> education and care for the needy project<a href="https://colorlib.com" target="_blank">2024</a>
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  <i class="icon-heart" aria-hidden="true"></i> 2024 <a href="https://colorlib.com" target="_blank"></a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-          </div>
+      </div>
         </div>
       </div>
     </footer>
