--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-      <a href="images/c6.png" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/c6.png); width: 50px; height: 50px; position: absolute; left: 0; top: 0;"></a>
-      <a class="navbar-brand" href="index.html" style="color: black;">CARE FOR THE NEEDY</a>
+      <a href="images/c6.png" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/c6.png); width: 50px; height: 50px; position: absolute; left: 0; top: 0; margin-top: 10px;"></a>
+<a class="navbar-brand" href="index.html" style="color: black;padding-right: 100px; margin-left: 40px;">EDUCATION AND CARE FOR THE NEEDY</a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> Menu
       </button>
@@ -480,7 +480,7 @@
     	<div class="container">
     		<div class="row d-md-flex">
     		<div class="col-md-6 d-flex ftco-animate">
-    			<div class="img img-2 align-self-stretch" style="background-image: url(images/b4.jpeg);"></div>
+    			<div class="img img-2 align-self-stretch" style="background-image: url(images/ug1.jpeg);"></div>
     		</div>
     		<div class="col-md-6 volunteer pl-md-5 ftco-animate">
     			<h3 class="mb-3">Be a volunteer</h3>
@@ -573,10 +573,11 @@
         </div>
         <div class="row">
           <div class="col-md-12 text-center">
+            Copyright &copy;<script>document.write(new Date().getFullmonth());</script> All rights reserved.<i class="icon-heart" aria-hidden="true">by</i> education and care for the needy project<a href="https://colorlib.com" target="_blank">2024</a>
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  <i class="icon-heart" aria-hidden="true"></i> 2024 <a href="https://colorlib.com" target="_blank"></a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+  
           </div>
         </div>
       </div>
